# dl-verify

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: main.py
app/api/routes/: verify.py
app/core/barcode/: detector.py  exceptions.py  jurisdiction_config.py  parser.py  validators.py
app/core/image/: quality.py
app/core/quality/: gate.py
app/core/scoring/: config.py  scorer.py
app/models/: __init__.py  verification.py
app/utils/: config.py  logger.py
config/: jurisdiction_policy.json
tests/: test_parser.py  test_quality.py  test_scorer.py  test_validators.py
ui/: index.html
